.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

3.3.6 - Unreleased
------------------

- "(Requires Javascript)" is now translatable in accessibility-info.pt.
  This closes http://dev.plone.org/plone/ticket/10475
  [vincentfretin]

- Explicitly check that a searchterm was provided before adding it to the
  query string. This closes
  http://dev.plone.org/plone/ticket/9025
  [blueaidan]

- Fixed for state changed message is wroning for pending item. This closes
  http://dev.plone.org/plone/ticket/10245
  [terapyon]

- Altered table of contents javascript so that comments are not displayed.
  [dbfrombrc]

- "Event when" improved for better i18n.  
  This closes http://dev.plone.org/plone/ticket/10196
  [gotcha]

- Nested groups appear again in prefs_group_members. This was broken since
  Plone 3.3.2. This closes http://dev.plone.org/plone/ticket/10075
  [vincentfretin]

- Fixed getIcon. 'Find and Catalog' works again.
  This closes http://dev.plone.org/plone/ticket/8235
  [amleczko]

- Added missing event parameter to inputlabel's blur handler. This closes
  http://dev.plone.org/plone/ticket/10369
  [mj]


3.3.5 - March 3rd, 2010
-----------------------

- Check for existance of a hash in the location before attempting to scroll to
  that location in toc.js. Fixes bug introduced in r32066, and refs
  http://dev.plone.org/plone/ticket/9364
  [dunlapm]

- default_error_message page adds the error code in the subject
  of the contact-info page
  This closes http://dev.plone.org/plone/ticket/8446
  [huub_bouma, kcleong]


3.3.4 - January 14th, 2010
--------------------------

- Avoid leading spaces in the class attribute of the body element.
  Refs http://dev.plone.org/plone/ticket/9489.
  [dukebody]

- member_search_results display login names only if the user
  has "List portal members" permission.